--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -15,12 +15,12 @@ remote_theme: pages-themes/hacker@v0.2.0
 
 plugins:
 - jekyll-remote-theme 
-- jekyll-paginate
-- jekyll-sitemap
-- jekyll-gist
-- jekyll-feed
-- jemoji
-- jekyll-include-cache
+#- jekyll-paginate
+#- jekyll-sitemap
+#- jekyll-gist
+#- jekyll-feed
+#- jemoji
+#- jekyll-include-cache
 
 # Site Author
 author:
