--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,7 +1,5 @@
-title: ESCU Companion App
-#email: brandon@sternfield.tech
-description: This project is meant to support an organization's implementation of Splunk ESCU.
+title: [ESCU Companion App]
+description: [A simple Splunk App developed to make your implementation of Splunk ESCU that much easier.]
 remote_theme: pages-themes/hacker@v0.2.0
-
 plugins:
-- jekyll-remote-theme 
+- jekyll-remote-theme
