--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -6,3 +6,8 @@ plugins:
 
 name: Brandon Sternfield (Optiv + ClearShark)
 repository: TheLawsOfChaos/escu_companion
+twitter:
+  username: thelawsofchaos
+twitter_username: thelawsofchaos
+github_username: thelawsofchaos
+
