--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -11,3 +11,11 @@ twitter:
 twitter_username: thelawsofchaos
 github_username: thelawsofchaos
 
+footer:
+  links:
+    - label: "Twitter"
+      icon: "fab fa-fw fa-twitter-square"
+      url: "https://twitter.com/thelawsofchaos"
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/TheLawsOfChaos/escu_companion"
