--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,5 +1,5 @@
-title: ESCU Companion App
-description: A simple Splunk App developed to make your implementation of Splunk ESCU that much easier.
+title: [ESCU Companion App]
+description: [A simple Splunk App developed to make your implementation of Splunk ESCU that much easier.]
 remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme
